<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>genie_sim_rviz_plugins</name>
  <version>3.2.0</version>
  <description>
    RViz2 plugins for GenieSim. Provides ViewCameraPosePublisherDisplay,
    which publishes the active 3D viewport's camera pose as
    geometry_msgs/PoseStamped so the headless OVRTX render node's FreeCam
    can mirror the user's RViz view.
  </description>
  <maintainer email="yangwendisheng@agibot.com" />
  <license file="LICENSE">Mozilla Public License Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_view_camera_pose.xml"/>
  </export>
</package>
